--- a/pkg/mobile/src/app/tabs/tabs.page.html
+++ b/pkg/mobile/src/app/tabs/tabs.page.html
@@ -3,7 +3,7 @@
         <ion-tab-button tab="tab1">
             <ion-icon
                 aria-hidden="true"
-                name="triangle"
+                name="home-outline"
             ></ion-icon>
             <ion-label>Inicio</ion-label>
         </ion-tab-button>
